# cloudflare-workers-where-i-am-api

./: .gitignore  Cargo.toml  README.md  deploy.bat  deploy.sh  wrangler.deploy.toml  wrangler.json  wrangler.toml
.github/workflows/: deploy.yml
src/: lib.rs  main.py
