[package]
name = "cloudflare-workers-api-where-i-am"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Headers",
  "Request",
  "Response",
  "ResponseInit",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
